--- a/src/components/board-pr/PRBoardForm.scss
+++ b/src/components/board-pr/PRBoardForm.scss
@@ -167,6 +167,12 @@
         object-fit: cover;
       }
 
+      .placeholder {
+        font-size: 14px;
+        color: #898989;
+        margin-left: 4px;
+      }
+
       .preview-box {
         width: 100%;
         height: 220px;
@@ -174,7 +180,7 @@
         display: flex;
 
         img {
-          margin-left: 8px;
+          margin-right: 8px;
           width: fit-content;
           height: calc(100% - 20px);
         }
