--- a/src/components/board-free/FreeBoardList.scss
+++ b/src/components/board-free/FreeBoardList.scss
@@ -18,8 +18,7 @@
     }
 
     .top {
-      font-size: small;
-      padding-bottom: 10px;
+      font-size: 14px;
       align-items: center;
 
       .user {
@@ -29,8 +28,8 @@
           margin-left: 6px;
         }
         .user-img {
-          width: 22px;
-          height: 22px;
+          width: 20px;
+          height: 20px;
           border-radius: 50px;
           object-fit: cover;
         }
@@ -38,10 +37,13 @@
     }
 
     .title {
-      color: #000000;
-      font-size: 16px;
+      display: inline-block;
+      color: #111827;
+      font-size: 17px;
       font-weight: 500;
-      padding-bottom: 10px;
+      margin: 8px 0;
+      height: 26px;
+      line-height: 26px;
     }
 
     .bottom {
