--- a/src/components/board-free/FreeBoardPost.scss
+++ b/src/components/board-free/FreeBoardPost.scss
@@ -1,6 +1,6 @@
 .free-board-post {
   background-color: #fff;
-  padding: 30px 0 40px;
+  padding: 30px 0 0;
   display: flex;
   flex-direction: column;
 
@@ -14,9 +14,26 @@
     color: #374151;
     font-size: 16px;
     line-height: 24px;
+    margin-bottom: 80px;
 
     p {
       padding: 6px 0;
+    }
+  }
+
+  .tags {
+    margin-bottom: 20px;
+    display: flex;
+    flex-wrap: wrap;
+
+    .tag {
+      color: #374151;
+      background-color: #f3f4f6;
+      padding: 6px 12px;
+      border-radius: 10px;
+      font-size: 14px;
+      margin: 6px 8px 0 0;
+      flex-shrink: 0;
     }
   }
 }
