Feat: 커뮤니티 글 등록 폼 변경(태그 추가)

--- a/src/components/board-pr/PRBoardList.scss
+++ b/src/components/board-pr/PRBoardList.scss
@@ -94,7 +94,7 @@
 
         &.tl-2 {
           @include ellipsis(2, 20px);
-          height: 40px;
+          height: fit-content;
           white-space: wrap;
         }
 
