--- a/src/components/board-pr/PRBoardList.scss
+++ b/src/components/board-pr/PRBoardList.scss
@@ -26,15 +26,40 @@
       }
     }
 
-    .buttons > button {
-      margin-left: 10px;
+    .buttons {
+      position: relative;
 
-      .MuiButton-startIcon {
-        margin-right: 2px;
+      button {
+        margin-left: 10px;
+
+        .MuiButton-startIcon {
+          margin-right: 2px;
+        }
+
+        &.MuiButton-outlinedDarkGray:hover {
+          border-color: #89898980;
+        }
       }
 
-      &.MuiButton-outlinedDarkGray:hover {
-        border-color: #89898980;
+      .MuiFormControl-root {
+        height: 30px;
+        margin: 0;
+
+        .MuiInputBase-root {
+          color: #898989;
+          font-size: 13px;
+          font-weight: 500;
+          line-height: 24px;
+
+          &.Mui-focused .MuiOutlinedInput-notchedOutline {
+            border-color: rgba(137, 137, 137, 0.5019607843);
+          }
+
+          .MuiSelect-select {
+            padding: 3px 9px;
+            height: 24px;
+          }
+        }
       }
     }
   }
@@ -47,7 +72,7 @@
 
   .post-card {
     box-sizing: border-box;
-    height: 300px;
+    height: 380px;
     width: 250px;
     position: relative;
     top: 0;
@@ -55,14 +80,14 @@
     margin-bottom: 70px;
     display: flex;
     flex-direction: column;
-    box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.061);
+    box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.096);
     transition: all 200ms ease-out;
     border-radius: 10px;
     overflow: hidden;
 
     img {
       width: 100%;
-      height: 170px;
+      height: 250px;
       object-fit: cover;
       flex-shrink: 0;
 
