--- a/src/pages/main/Main.scss
+++ b/src/pages/main/Main.scss
@@ -32,15 +32,7 @@
     flex-direction: column;
     justify-content: center;
     height: 100%;
-    padding: 80px 0;
-    background-color: #282828;
-}
-.rating-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    height: 500px;
+    padding: 56px 0 72px 0;
     background-color: #282828;
 }
 .review-container {
@@ -56,12 +48,4 @@
     justify-content: space-around;
     height: 540px;
     background-color: #282828;
-}
-.theater-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 540px;
-    background-color: #202020;
 }
