--- a/src/components/search/play-search-result/PlaySearchContentBox.scss
+++ b/src/components/search/play-search-result/PlaySearchContentBox.scss
@@ -15,45 +15,45 @@
     align-items: center;
     border: 1px solid #bcbcbc;
     border-radius: 8px;
-    width: 130px;
-    height: 182px;
+    width: 120px;
+    height: 168px;
+    overflow: hidden;
+
+    a {
+      width: 100%;
+      height: 100%;
+    }
 
     img {
-      width: 130px;
-      height: 182px;
-      border-radius: 8px;
-      position: relative;
-      top: 0.7px;
+      width: 100%;
+      height: 100%;
       object-fit: cover;
     }
   }
 
   .play-info {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     flex-direction: column;
     padding-left: 50px;
 
-    h3,
-    p {
-      margin: 0;
-    }
-
     h3 {
-      padding: 15px 0;
-      font-size: 18px;
+      margin: 0;
+      padding: 10px 0 20px;
+      font-size: 20px;
       font-weight: 500;
     }
 
     p {
-      padding: 1.5px 0;
+      margin-bottom: 10px;
       font-size: 14px;
       color: #808080;
-      line-height: 1.3;
-    }
 
-    .location {
-      font-weight: 500;
+      &.price {
+        font-size: 16px;
+        color: #282828;
+        padding-top: 10px;
+      }
     }
   }
 
