--- a/src/components/search/play-search-result/PlaySearchHeader.scss
+++ b/src/components/search/play-search-result/PlaySearchHeader.scss
@@ -1,19 +1,19 @@
 .play-search-header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 
   span {
     font-weight: bold;
-    font-size: 26px;
+    font-size: 24px;
   }
 
   .sort-by {
     width: 120px;
-    height: 40px;
-    font-size: 16px;
+    height: 34px;
+    font-size: 14px;
     font-family: "Nanum Gothic", sans-serif;
     text-align: center;
     border: 1px solid rgba(188, 188, 188, 0.7);
-    border-radius: 8px;
   }
 }
