--- a/src/components/search/play-search-result/PlaySearchResult.scss
+++ b/src/components/search/play-search-result/PlaySearchResult.scss
@@ -1,6 +1,6 @@
 @mixin basic-margin-and-width {
   margin: 20px auto;
-  margin-top: 80px;
+  margin-top: 40px;
   width: 100%;
 }
 
@@ -14,9 +14,8 @@
 
   .play-search-content {
     background-color: #ffffff;
-    border: 1px solid #bcbcbc;
-    border-radius: 8px;
-    margin-top: 30px;
+    border: 1px solid #d6d6d6;
+    margin: 20px 0 100px;
     padding: 30px 50px;
     display: flex;
     flex-direction: column;
@@ -25,6 +24,10 @@
     a {
       margin-bottom: 20px;
     }
+  }
+
+  .no-result {
+    margin: 80px auto;
   }
 }
 
