--- a/src/pages/search-result/SearchResultPage.scss
+++ b/src/pages/search-result/SearchResultPage.scss
@@ -3,7 +3,12 @@
   flex-direction: column;
   font-family: "Noto Sans KR", sans-serif;
   min-height: 70vh;
-  max-width: 820px;
+  max-width: 1000px;
   width: 100%;
   margin: auto;
+}
+
+.bg-gray {
+  width: 100%;
+  background-color: #f8f9fa;
 }
