Feat: 전체적인 기능 추가 및 디자인 변경

--- a/src/App.scss
+++ b/src/App.scss
@@ -82,10 +82,10 @@ h6 {
 }
 
 .page-margin {
-  margin: 40px auto;
+  margin: 40px auto 100px;
 }
 
 .page-margin-bottom {
   margin: 0 auto;
-  margin-bottom: 60px;
+  margin-bottom: 100px;
 }
