--- a/src/pages/pr-board/PRBoardListPage.scss
+++ b/src/pages/pr-board/PRBoardListPage.scss
@@ -5,12 +5,19 @@
   max-width: 1110px;
   width: 100%;
 
+  .flex-box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
   .best-box {
     width: 100%;
     height: 400px;
     overflow: hidden;
     border-radius: 6px;
     position: relative;
+    margin-bottom: 60px;
 
     .bg-img {
       width: 95%;
@@ -111,37 +118,104 @@
       }
     }
 
-    .arrow {
+    .arrow-left {
       position: absolute;
-      top: 0;
-      width: 100%;
-      height: 100%;
+      top: 180px;
+      left: 0;
       display: flex;
       align-items: center;
       justify-content: space-between;
       color: #ffffff33;
+      font-size: 40px;
+      margin: 0 20px;
 
-      > .MuiSvgIcon-root {
-        font-size: 40px;
-        margin: 0 20px;
+      &:hover {
+        color: #ffffff67;
+      }
+    }
 
-        &:hover {
-          color: #ffffff67;
+    .arrow-right {
+      position: absolute;
+      top: 180px;
+      right: 0;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      color: #ffffff33;
+      font-size: 40px;
+      margin: 0 20px;
+
+      &:hover {
+        color: #ffffff67;
+      }
+    }
+  }
+
+  .header {
+    width: 100%;
+    padding: 10px 0;
+    margin-bottom: 20px;
+    border-bottom: #6b72804d solid 1px;
+
+    .division > div {
+      margin-right: 24px;
+      cursor: pointer;
+      color: #7f7f7f;
+
+      &.selected {
+        color: #ffa200;
+        font-weight: 500;
+      }
+    }
+
+    .buttons {
+      position: relative;
+
+      button {
+        margin-left: 10px;
+
+        .MuiButton-startIcon {
+          margin-right: 2px;
+        }
+
+        &.MuiButton-outlinedDarkGray:hover {
+          border-color: #89898980;
+        }
+      }
+
+      .MuiFormControl-root {
+        height: 30px;
+        margin: 0;
+
+        .MuiInputBase-root {
+          color: #898989;
+          font-size: 13px;
+          font-weight: 500;
+          line-height: 24px;
+
+          &.Mui-focused .MuiOutlinedInput-notchedOutline {
+            border-color: rgba(137, 137, 137, 0.5019607843);
+          }
+
+          .MuiSelect-select {
+            padding: 3px 9px;
+            height: 24px;
+          }
         }
       }
     }
   }
 
   .state {
-    width: calc(100% - 32px);
+    width: 100%;
     padding: 40px 0;
-    margin: 40px 16px 0;
+    margin: 20px 0 60px;
     display: flex;
     justify-content: center;
     align-items: center;
 
     &.box {
-      height: calc(100vh - 500px);
+      height: calc(100vh - 300px);
       background-color: #0000000c;
     }
   }
