--- a/src/components/board-pr/PRBoardForm.scss
+++ b/src/components/board-pr/PRBoardForm.scss
@@ -179,8 +179,16 @@
         &.main.image {
           max-height: 600px;
           min-height: 150px;
+          height: 100%;
           width: 300px;
           margin-top: 16px;
+          overflow: hidden;
+
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
         }
 
         .icon {
