--- a/src/components/mypage/MemberInfo.scss
+++ b/src/components/mypage/MemberInfo.scss
@@ -5,6 +5,11 @@
   height: 780px;
   margin: 10px 0;
 
+  .flex-row {
+    display: flex;
+    flex-direction: row;
+  }
+
   .header {
     display: flex;
     justify-content: space-between;
@@ -19,12 +24,26 @@
   }
 
   .member-info-profile-box {
+    padding: 40px 0;
+
+    .error {
+      font-size: 12px;
+      color: rgb(255, 0, 0);
+      display: flex;
+      line-height: 1.5;
+      margin-top: 4px;
+      svg {
+        margin: 3px 2px 0 0;
+      }
+    }
+  }
+
+  .flex-row {
     display: flex;
     justify-content: center;
     width: 800px;
     align-items: center;
     gap: 28px;
-    padding: 40px 0;
 
     .profile-photo {
       width: 112px;
