fix: 같은 이미지 업로드 버그 수정, 검색어 없을 시 검색 결과 수정

--- a/src/components/play-detail/play-review-metrials/ReviewForm.scss
+++ b/src/components/play-detail/play-review-metrials/ReviewForm.scss
@@ -20,6 +20,15 @@
         margin-right: 30px;
         font-size: 16px;
       }
+
+      div {
+        position: relative;
+        top: 5px;
+
+        p {
+          margin-top: 7px;
+        }
+      }
     }
 
     .review-author-box {
