--- a/src/App.scss
+++ b/src/App.scss
@@ -22,9 +22,8 @@
 .App {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  height: 100vh;
   justify-content: space-between;
-  min-height: 100vh;
 }
 
 * {
