--- a/src/pages/errorPage/NotFoundPage.scss
+++ b/src/pages/errorPage/NotFoundPage.scss
@@ -3,8 +3,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 0 auto;
-  min-height: 100vh;
+  margin: 40px auto;
+  height: 100%;
+  flex-shrink: 1;
   font-family: "Noto Sans KR", sans-serif;
 
   img {
