--- a/src/components/mypage/MyComments.scss
+++ b/src/components/mypage/MyComments.scss
@@ -24,5 +24,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    .MuiDataGrid-root .link:hover {
+      color: #0062b2;
+      text-decoration: underline;
+    }
   }
 }
