Design: 메인페이지 css 에러 해결

--- a/src/pages/errorPage/NotFoundPage.scss
+++ b/src/pages/errorPage/NotFoundPage.scss
@@ -5,7 +5,7 @@
   align-items: center;
   margin: 40px auto;
   height: 100%;
-  flex-shrink: 1;
+  flex-grow: 1;
   font-family: "Noto Sans KR", sans-serif;
 
   img {
