--- a/src/App.scss
+++ b/src/App.scss
@@ -22,7 +22,8 @@
 .App {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
+  height: 100%;
   justify-content: space-between;
 }
 
