--- a/src/components/board-pr/PRBoardList.scss
+++ b/src/components/board-pr/PRBoardList.scss
@@ -81,23 +81,48 @@
       .tags {
         display: flex;
         flex-wrap: wrap;
-        max-height: 18px;
+        max-height: 22px;
         @media (max-width: 992px) {
           max-height: 26px;
         }
         overflow: hidden;
         margin-bottom: 6px;
 
-        * {
-          flex: 0 0 auto;
+        .tag {
           box-sizing: border-box;
-          background-color: #ebebeb;
+          background-color: #f3f4f6;
           margin-right: 6px;
-          padding: 3px;
-          border-radius: 4px;
+          padding: 4px 9px;
+          border-radius: 10px;
+          height: 22px;
+
+          display: flex;
+          flex-wrap: wrap;
+          @media (max-width: 992px) {
+            max-height: 26px;
+          }
+          overflow: hidden;
+
+          a {
+            font-weight: 400;
+            font-size: 12px;
+            color: #62676c;
+            height: min-content;
+          }
+        }
+      }
+      .tag {
+        box-sizing: border-box;
+        background-color: #f3f4f6;
+        margin-right: 6px;
+        padding: 2px 9px;
+        border-radius: 10px;
+        height: 22px;
+        a {
           font-weight: 400;
           font-size: 12px;
           color: #62676c;
+          height: min-content;
         }
       }
 
