--- a/src/components/search/promotion-search-result/PromotionSearchContentBox.scss
+++ b/src/components/search/promotion-search-result/PromotionSearchContentBox.scss
@@ -45,6 +45,7 @@
     }
 
     .category {
+      flex-shrink: 0;
       display: inline-block;
       font-size: 13px;
       font-weight: 600;
@@ -52,7 +53,7 @@
       border: 1px solid #ffb400;
       color: #ffb400;
       border-radius: 50px;
-      margin-right: 10px;
+      margin: 2px 10px 0 0;
 
       .blue {
         color: #1976d2;
@@ -66,7 +67,7 @@
       font-size: 20px;
       font-weight: 500;
       display: flex;
-      align-items: center;
+      align-items: flex-start;
 
       h3 {
         margin: 0;
@@ -92,12 +93,12 @@
 
       .tag {
         flex: 0 0 auto;
-        height: 24px;
+        height: 26px;
         box-sizing: border-box;
         background-color: #f0f0f0;
         margin: 0 6px 4px 0;
-        padding: 3px 8px;
-        border-radius: 7px;
+        padding: 4px 12px;
+        border-radius: 50px;
         font-size: 14px;
         font-weight: 400;
         line-height: 16px;
