--- a/src/pages/pr-board/PRBoardListPage.scss
+++ b/src/pages/pr-board/PRBoardListPage.scss
@@ -3,36 +3,44 @@
 @keyframes fadein {
   from {
     opacity: 0;
+    top: -10px;
   }
   to {
     opacity: 1;
+    top: 0;
   }
 }
 @-moz-keyframes fadein {
   /* Firefox */
   from {
     opacity: 0;
+    top: -10px;
   }
   to {
     opacity: 1;
+    top: 0;
   }
 }
 @-webkit-keyframes fadein {
   /* Safari and Chrome */
   from {
     opacity: 0;
+    top: -10px;
   }
   to {
     opacity: 1;
+    top: 0;
   }
 }
 @-o-keyframes fadein {
   /* Opera */
   from {
     opacity: 0;
+    top: -10px;
   }
   to {
     opacity: 1;
+    top: 0;
   }
 }
 
@@ -65,14 +73,12 @@
       position: absolute;
       width: 100%;
       height: 100%;
-      top: -10px;
+
       left: 0;
       opacity: 0;
 
       &.visible {
-        opacity: 1;
-        top: 0;
-        transition: all 1s;
+        animation: fadein 1s forwards;
       }
     }
 
