--- a/src/pages/util/PrivacyPolicy.scss
+++ b/src/pages/util/PrivacyPolicy.scss
@@ -2,8 +2,8 @@
   line-height: 1.5;
   max-width: 900px;
   color: rgb(55, 53, 47);
-  margin: 0 auto;
-  padding: 40px 100px;
+  margin: 40px auto 100px;
+  padding: 60px 100px;
   box-shadow: 1px 1px 8px 4px #0000001d;
   box-sizing: border-box;
 
