--- a/src/components/common/header/Header.scss
+++ b/src/components/common/header/Header.scss
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   background-color: #282828;
-  height: 200px;
+  height: 180px;
 }
 .header-container::before {
   content: '';
@@ -11,14 +11,14 @@
   top: 70%;
   left: 0;
   width: 100%;
-  height: 0.5px;
-  background-color: #bbb;
+  height: 1px;
+  background-color: rgba(187, 187, 187, 0.5);
 }
 .header-box {
   display: flex;
   flex-direction: column;
   width: 1110px;
-  height: 200px;
+  height: 180px;
 }
 .header-icon-box {
   display: flex;
@@ -50,7 +50,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 140px;
+  height: 120px;
   background-color: #282828;
   color: white;
   font-size: 50px;
@@ -92,8 +92,8 @@
 .header-search-btn {
   padding-left: 20px;
   background-color: #282828;
-  border-left: 0.5px solid #ccc;
-  border-right: 0.5px solid #ccc;
+  border-left: 1px solid rgba(187, 187, 187, 0.5);
+  border-right: 1px solid rgba(187, 187, 187, 0.5);
   width: 260px;
   height: 36px;
   cursor: pointer;
