--- a/src/components/main/MainPublicity.scss
+++ b/src/components/main/MainPublicity.scss
@@ -31,36 +31,35 @@
   align-items: center;
   gap: 6px;
   width: 100%;
-  height: auto; /* 이미지가 넘치지 않도록 높이 자동 조절 */
+  max-height: 720px; /* 최대 높이 설정 */
   position: sticky;
   top: 0;
   left: 0;
   cursor: pointer;
 }
+
 .publicity-product1 img {
   width: 100%;
-  height: 100%;
+  height: auto; /* 이미지 비율 유지 */
+  max-height: 100%; /* 최대 높이 설정 */
   transition: transform 0.2s ease-in-out;
-  &:hover {
-    transform: scale(1.05);
-  }
 }
+
 .publicity-product {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 6px;
   width: 100%;
-  height: auto; /* 이미지가 넘치지 않도록 높이 자동 조절 */
+  max-height: 520px; /* 최대 높이 설정 */
   cursor: pointer;
 }
+
 .publicity-product img {
   width: 100%;
-  height: 100%;
+  height: auto; /* 이미지 비율 유지 */
+  max-height: 100%; /* 최대 높이 설정 */
   transition: transform 0.2s ease-in-out;
-  &:hover {
-    transform: scale(1.05);
-  }
 }
 .main-publicity1-img-box {
   width: 460px;
