--- a/src/components/common/header/Header.scss
+++ b/src/components/common/header/Header.scss
@@ -8,7 +8,7 @@
 .header-container::before {
   content: '';
   position: absolute;
-  top: 70%;
+  top: 66.6%;
   left: 0;
   width: 100%;
   height: 1px;
@@ -74,19 +74,34 @@
 .header-tab {
   width: 112px;
 }
-.header-tab-text {
+.header-tab-text1 {
+  width: 32px;
   color: #eee;
   font-size: 16px;
   letter-spacing: 1px;
-  width: 64px;
   cursor: pointer;
   transition: transform 0.4s ease-in-out;
 }
-.header-tab-text.active {
+.header-tab-text2 {
+  width: 64px;
+  color: #eee;
+  font-size: 16px;
+  letter-spacing: 1px;
+  cursor: pointer;
+  transition: transform 0.4s ease-in-out;
+}
+.header-tab-text1.active {
   color: #ffb400;
   font-weight: 600;
 }
-.header-tab-text:hover {
+.header-tab-text1:hover {
+  font-weight: 600;
+}
+.header-tab-text2.active {
+  color: #ffb400;
+  font-weight: 600;
+}
+.header-tab-text2:hover {
   font-weight: 600;
 }
 .header-search-btn {
