--- a/src/components/mypage/MyComments.scss
+++ b/src/components/mypage/MyComments.scss
@@ -20,7 +20,6 @@
   }
 
   .body {
-    height: 632px;
     width: 800px;
     display: flex;
     align-items: center;
@@ -30,5 +29,9 @@
       color: #0062b2;
       text-decoration: underline;
     }
+  }
+
+  .placeholder {
+    color: #b6b6b6;
   }
 }
