Feat: 전체적인 수정 작업 - 디테일 페이지 대표사진 클릭 시 크게보기 기능 추가 - 디테일 페이지 링크 공유 소셜 추가 - get api fetch구문 try-catch 추가 - 탈퇴한 회원 처리 추가 - 홍보게시글 작성, 수정 시 메인 이미지 가로사진 경고 추가 - 홍보 리스트 카드 hover 효과 적용 - 회원 탈퇴 시 안내문구 변경 - 검색 페이지 로딩 및 서버 에러 상태 ui 추가 - 댓글 수정, 삭제 시 401, 403에러 처리 추가 - 댓글 리스트 limit 상수로 관리하도록 변경

--- a/src/components/board-pr/PRBoardForm.scss
+++ b/src/components/board-pr/PRBoardForm.scss
@@ -170,6 +170,11 @@
         font-size: 14px;
         color: #898989;
         margin-left: 4px;
+
+        &.red {
+          color: red;
+          font-weight: 500;
+        }
       }
 
       .image {
