--- a/src/components/board-pr/PRBoardList.scss
+++ b/src/components/board-pr/PRBoardList.scss
@@ -160,8 +160,8 @@
     }
   }
 
-  .content-box:hover {
+  .post-card:hover {
     top: -4px;
-    box-shadow: 2px 6px 9px rgba(0, 0, 0, 0.061);
+    box-shadow: 2px 6px 9px 3px rgba(0, 0, 0, 0.061);
   }
 }
