--- a/src/components/board/PostTop.scss
+++ b/src/components/board/PostTop.scss
@@ -23,6 +23,7 @@
     color: #111827;
     line-height: 24px;
   }
+
   .date {
     font-size: 14px;
     color: #374151;
@@ -35,6 +36,7 @@
       font-size: 10px;
     }
   }
+
   .view-cnt {
     display: flex;
     align-items: center;
@@ -44,12 +46,14 @@
       color: #374151b3;
     }
   }
+
   .icons {
     align-self: center;
     display: flex;
     height: 44px;
     align-items: center;
     font-size: 18px;
+    position: relative;
 
     > * {
       margin-left: 14px;
@@ -59,9 +63,70 @@
     .comments-icon {
       display: flex;
     }
+
     span {
       line-height: 20px;
       margin-left: 2px;
+    }
+  }
+
+  .share-btn {
+    display: flex;
+    align-items: flex-end;
+    position: relative;
+
+    p {
+      font-size: 17px;
+      margin: 0;
+      padding-right: 20px;
+      position: relative;
+      bottom: 13px;
+    }
+  }
+
+  .share-options {
+    position: absolute;
+    bottom: -80px;
+    right: 0;
+    border: 1.5px solid #ffb400;
+    border-radius: 8px;
+    padding: 25px 10px 0;
+    display: flex;
+    z-index: 100;
+    background-color: #ffffff;
+
+    .share-option {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      bottom: 12px;
+      margin: 0 10px;
+      flex-grow: 1;
+
+      .SNS-img-box {
+        height: 50px;
+        display: flex;
+        align-items: center;
+
+        img {
+          width: 30px;
+          height: 30px;
+        }
+      }
+    }
+
+    .share-option:nth-child(3) {
+      img {
+        height: 27px;
+        width: 27px;
+      }
+    }
+
+    .close-icon {
+      position: relative;
+      top: 15px;
     }
   }
 
