--- a/src/pages/play-detail/PlayDetail.scss
+++ b/src/pages/play-detail/PlayDetail.scss
@@ -5,6 +5,7 @@
     flex-direction: column;
     width: 1110px;
     margin: 50px auto;
+    margin-bottom: 100px;
     font-family: "Noto Sans KR", sans-serif;
   }
 
@@ -21,6 +22,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-top: 50px;
   }
 }
 
