--- a/src/pages/play-list/PlayList.scss
+++ b/src/pages/play-list/PlayList.scss
@@ -9,6 +9,7 @@ body {
     flex-direction: column;
     width: 1110px;
     margin: 30px auto;
+    margin-bottom: 200px;
   }
 
   .play-list-main {
