--- a/src/components/play-detail/PlayDetailInfo.scss
+++ b/src/components/play-detail/PlayDetailInfo.scss
@@ -25,6 +25,7 @@
       font-weight: 700;
       margin: 10px 0;
       line-height: 1.4;
+      margin: 0;
     }
 
     .summary {
@@ -76,84 +77,6 @@
 
         img {
           width: 100%;
-        }
-      }
-    }
-  }
-}
-
-@media (max-width: 550px) {
-  .play-detail-info {
-    display: flex;
-    flex-direction: column;
-    margin-top: 15px;
-
-    div {
-      margin-bottom: 30px;
-
-      h3 {
-        margin-bottom: 20px;
-      }
-    }
-
-    .play-time-info p:nth-child(2) {
-      font-weight: 700;
-    }
-
-    .summary {
-      margin-bottom: 50px;
-
-      p {
-        line-height: 160%;
-      }
-    }
-
-    .crew-box {
-      display: flex;
-      flex-direction: column;
-      border: 1.5px solid rgba(188, 188, 188, 0.5);
-      border-radius: 8px;
-
-      div {
-        padding: 0 20px;
-        flex: 1;
-        margin-bottom: 0;
-
-        li {
-          font-size: 18px;
-        }
-      }
-
-      div:first-child,
-      div:nth-child(2) {
-        border-bottom: 1.5px solid rgba(188, 188, 188, 0.5);
-      }
-
-      li {
-        font-size: 22px;
-        margin: 10px 0 30px 0;
-        font-weight: 700;
-      }
-
-      p {
-        font-size: 16px;
-      }
-    }
-
-    .detail-poster {
-      h3 {
-        padding-top: 20px;
-      }
-
-      .detail-poster-img {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-
-        img {
-          width: 1000px;
-          width: 95%;
         }
       }
     }
