--- a/src/components/play-detail/PlayDetailTop.scss
+++ b/src/components/play-detail/PlayDetailTop.scss
@@ -172,10 +172,15 @@
             display: flex;
             justify-content: flex-end;
           }
-        }
 
-        .price {
-          flex-direction: column;
+          .price {
+            flex-wrap: nowrap;
+            margin-bottom: 30px;
+
+            h3 {
+              width: 30px;
+            }
+          }
         }
 
         p {
@@ -218,563 +223,6 @@
 
         .reserve-btn {
           padding-left: 20px;
-        }
-      }
-    }
-  }
-}
-
-@media (min-width: 901px) and (max-width: 1130px) {
-  .play-detail-top-container {
-    .play-detail-top {
-      display: flex;
-
-      .play-poster {
-        display: flex;
-        flex-direction: column;
-
-        .poster-box {
-          width: 350px;
-          height: 450px;
-          border-radius: 8px;
-          box-shadow: -3px 3px 5px #bcbcbc;
-
-          .end-show-design {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 350px;
-            height: 450px;
-            position: absolute;
-            background-color: rgb(0, 0, 0, 0.5);
-            font-family: "Noto Sans KR";
-            border-radius: 8px;
-
-            img {
-              width: 250px;
-              height: 250px;
-            }
-
-            .end-show-text {
-              position: absolute;
-              display: flex;
-              align-items: center;
-              justify-content: center;
-              font-weight: bold;
-              color: #ffffff;
-              font-size: 50px;
-            }
-          }
-
-          img {
-            width: 350px;
-            height: 450px;
-            border-radius: 8px;
-          }
-        }
-      }
-
-      .play-info {
-        margin-left: 100px;
-        width: 800px;
-
-        h1 {
-          height: 45px;
-          padding-left: 10px;
-          display: flex;
-          flex-wrap: wrap;
-          font-family: "Noto Sans KR";
-          font-size: 42px;
-          height: auto;
-        }
-
-        div {
-          height: 45px;
-          padding-left: 10px;
-          height: auto;
-
-          h3,
-          p {
-            margin: 0;
-          }
-
-          h3 {
-            margin: 20px 0;
-          }
-        }
-
-        p {
-          margin-left: 15px;
-          font-size: 18px;
-        }
-
-        hr {
-          margin: 15px 0 30px;
-        }
-      }
-    }
-
-    .play-detail-buttons {
-      height: 60px;
-      display: flex;
-      flex-direction: column;
-      position: absolute;
-      bottom: 130px;
-
-      /* mui 버튼에서의 text는 p tag 안에 담겨 있으므로 위 .play-info p 땜에 이상하게 css가 적용되었음!*/
-      /* 이 점 주의하기! */
-      p {
-        font-weight: 700;
-        font-size: 23px;
-        margin: 0;
-        padding: 5px;
-      }
-
-      .copy-btn {
-        display: flex;
-        align-items: center;
-        position: relative;
-        bottom: 15px;
-
-        p {
-          display: inline-block;
-          line-height: 1;
-          font-size: 18px;
-        }
-
-        &:hover {
-          cursor: pointer;
-        }
-      }
-
-      .share-btn {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        p {
-          margin: 0;
-          padding-right: 20px;
-          font-size: 18px;
-          position: relative;
-          bottom: 13px;
-        }
-
-        // svg {
-        //   padding-right: 10px;
-        // }
-
-        .share-option {
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
-          padding-right: 20px;
-          position: relative;
-          bottom: 12px;
-
-          .SNS-img-box {
-            height: 50px;
-            display: flex;
-            align-items: center;
-
-            img {
-              width: 30px;
-              height: 30px;
-            }
-          }
-        }
-      }
-
-      .another-btn {
-        display: flex;
-        flex-direction: column;
-        padding-top: 20px;
-
-        .dibs-btn,
-        .reserve-btn {
-          // padding: 0;
-          margin-bottom: 15px;
-          height: 60px;
-        }
-      }
-    }
-  }
-}
-
-@media (min-width: 402px) and (max-width: 900px) {
-  .play-detail-top-container {
-    .play-detail-top {
-      // display: flex;
-
-      .play-poster {
-        display: flex;
-        justify-content: center;
-
-        .poster-box {
-          width: auto;
-          height: auto;
-          border-radius: 8px;
-          box-shadow: -3px 3px 5px #bcbcbc;
-          position: relative;
-
-          .end-show-design {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            background-color: rgb(0, 0, 0, 0.5);
-            font-family: "Noto Sans KR";
-            border-radius: 8px;
-
-            img {
-              width: 250px;
-              height: 250px;
-            }
-
-            .end-show-text {
-              position: absolute;
-              display: flex;
-              align-items: center;
-              justify-content: center;
-              font-weight: bold;
-              color: #ffffff;
-              font-size: 50px;
-            }
-          }
-
-          img {
-            width: 100%;
-            height: auto;
-            border-radius: 8px;
-          }
-        }
-      }
-
-      .play-info {
-        width: 100%;
-
-        h1 {
-          height: 45px;
-          padding-left: 10px;
-          display: flex;
-          justify-content: center;
-          flex-wrap: wrap;
-          font-family: "Noto Sans KR";
-          font-size: 32px;
-          height: auto;
-          margin-top: 40px;
-        }
-
-        div {
-          height: 45px;
-          padding-left: 10px;
-          height: auto;
-          margin-bottom: 20px;
-          // display: flex;
-          // flex-wrap: wrap;
-
-          h3,
-          p {
-            margin: 10px 0;
-          }
-        }
-
-        p {
-          margin-left: 15px;
-          font-size: 18px;
-        }
-
-        hr {
-          margin: 15px 0 30px;
-        }
-      }
-    }
-
-    .play-detail-buttons {
-      height: 80px;
-      // margin-top: 40px;
-      // display: flex;
-      // justify-content: space-between;
-
-      /* mui 버튼에서의 text는 p tag 안에 담겨 있으므로 위 .play-info p 땜에 이상하게 css가 적용되었음!*/
-      /* 이 점 주의하기! */
-      p {
-        font-weight: 700;
-        font-size: 18px;
-        margin: 0;
-        padding: 5px;
-      }
-
-      .copy-btn {
-        display: flex;
-        align-items: center;
-        margin-bottom: 20px;
-        padding-left: 10px;
-
-        p {
-          display: inline-block;
-          line-height: 1;
-          font-size: 18px;
-        }
-
-        // svg {
-        //   margin-right: 5px;
-        // }
-
-        &:hover {
-          cursor: pointer;
-        }
-      }
-
-      .share-btn {
-        display: flex;
-
-        p {
-          margin: 0;
-          padding-right: 20px;
-          font-size: 18px;
-          position: relative;
-          top: 6px;
-        }
-
-        // svg {
-        //   padding-right: 10px;
-        // }
-
-        .share-option {
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
-          padding-right: 20px;
-
-          .SNS-img-box {
-            height: 50px;
-            display: flex;
-            align-items: center;
-
-            img {
-              width: 30px;
-              height: 30px;
-            }
-          }
-        }
-      }
-
-      .another-btn {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-top: 15px;
-
-        .dibs-btn,
-        .reserve-btn {
-          // padding: 0;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          height: 60px;
-        }
-
-        .dibs-btn {
-          margin-right: 20px;
-        }
-
-        .reserve-btn {
-          margin-left: 20px;
-          display: flex;
-          flex-direction: column;
-          width: 180px;
-        }
-      }
-    }
-  }
-}
-
-@media (max-width: 402px) {
-  .play-detail-top-container {
-    .play-detail-top {
-      // display: flex;
-
-      .play-poster {
-        display: flex;
-        justify-content: center;
-
-        .poster-box {
-          width: auto;
-          height: auto;
-          border-radius: 8px;
-          box-shadow: -3px 3px 5px #bcbcbc;
-          position: relative;
-
-          .end-show-design {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            background-color: rgb(0, 0, 0, 0.5);
-            font-family: "Noto Sans KR";
-            border-radius: 8px;
-
-            img {
-              width: 200px;
-              height: 200px;
-            }
-
-            .end-show-text {
-              position: absolute;
-              display: flex;
-              align-items: center;
-              justify-content: center;
-              font-weight: bold;
-              color: #ffffff;
-              font-size: 45px;
-            }
-          }
-
-          img {
-            width: 100%;
-            height: auto;
-            border-radius: 8px;
-          }
-        }
-      }
-
-      .play-info {
-        width: 100%;
-
-        h1 {
-          height: 45px;
-          padding-left: 10px;
-          display: flex;
-          justify-content: center;
-          flex-wrap: wrap;
-          font-family: "Noto Sans KR";
-          font-size: 32px;
-          height: auto;
-          margin-top: 40px;
-        }
-
-        div {
-          height: 45px;
-          padding-left: 10px;
-          height: auto;
-          margin-bottom: 20px;
-          // display: flex;
-          // flex-wrap: wrap;
-
-          h3,
-          p {
-            margin: 10px 0;
-          }
-        }
-
-        p {
-          margin-left: 15px;
-          font-size: 18px;
-        }
-
-        hr {
-          margin: 15px 0 30px;
-        }
-      }
-    }
-
-    .play-detail-buttons {
-      height: 80px;
-      // margin-top: 40px;
-      // display: flex;
-      // justify-content: space-between;
-
-      /* mui 버튼에서의 text는 p tag 안에 담겨 있으므로 위 .play-info p 땜에 이상하게 css가 적용되었음!*/
-      /* 이 점 주의하기! */
-      p {
-        font-weight: 700;
-        font-size: 18px;
-        margin: 0;
-        padding: 5px;
-      }
-
-      .copy-btn {
-        display: flex;
-        align-items: center;
-        margin-bottom: 20px;
-        padding-left: 10px;
-
-        p {
-          display: inline-block;
-          line-height: 1;
-          font-size: 18px;
-        }
-
-        // svg {
-        //   margin-right: 5px;
-        // }
-
-        &:hover {
-          cursor: pointer;
-        }
-      }
-
-      .share-btn {
-        display: flex;
-        flex-wrap: wrap;
-
-        p {
-          margin: 0;
-          padding-right: 20px;
-          font-size: 18px;
-          // position: relative;
-          // top: 6px;
-          width: 100%;
-        }
-
-        // svg {
-        //   padding-right: 10px;
-        // }
-
-        .share-option {
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
-
-          .SNS-img-box {
-            height: 50px;
-            display: flex;
-            align-items: center;
-
-            img {
-              width: 30px;
-              height: 30px;
-            }
-          }
-        }
-      }
-
-      .another-btn {
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        position: relative;
-        bottom: 15px;
-
-        .dibs-btn,
-        .reserve-btn {
-          // padding: 0;
-          // margin-right: 30px;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-
-          p {
-            font-size: 15px;
-          }
         }
       }
     }
