--- a/src/components/play-detail/play-review-metrials/PlayReviewHeader.scss
+++ b/src/components/play-detail/play-review-metrials/PlayReviewHeader.scss
@@ -16,14 +16,40 @@
       }
     }
 
-    .play-review-sort {
-      select {
+    .sort {
+      position: relative;
+
+      button {
+        margin-left: 10px;
+
+        .MuiButton-startIcon {
+          margin-right: 2px;
+        }
+
+        &.MuiButton-outlinedDarkGray:hover {
+          border-color: #89898980;
+        }
+      }
+
+      .MuiFormControl-root {
         height: 30px;
-        padding: 5px;
-        font-family: "Noto Sans KR", sans-serif;
-        text-align: center;
-        border-radius: 6px;
-        border-color: #bcbcbc;
+        margin: 0;
+
+        .MuiInputBase-root {
+          color: #898989;
+          font-size: 13px;
+          font-weight: 500;
+          line-height: 24px;
+
+          &.Mui-focused .MuiOutlinedInput-notchedOutline {
+            border-color: rgba(137, 137, 137, 0.5019607843);
+          }
+
+          .MuiSelect-select {
+            padding: 3px 9px;
+            height: 24px;
+          }
+        }
       }
     }
   }
