--- a/src/components/main/MainReview.scss
+++ b/src/components/main/MainReview.scss
@@ -1,7 +1,7 @@
 .main-review-container {
   display: flex;
   align-items: flex-end;
-  width: 1160px;
+  width: 1140px;
   .review-title-box {
     display: flex;
     flex-direction: column;
@@ -46,11 +46,14 @@
   }
   .stars {
     display: flex;
+    justify-content: center;
     align-items: center;
     gap: 4px;
-    margin: 0 0 20px 8px;
+    margin: 0 0 4px 0;
+    padding-top: 12px;
     color: rgb(135, 135, 135);
     font-size: 14px;
+    border-top: 0.5px solid rgb(135, 135, 135);
   }
 }
 .main-review-img-box {
