Feat: 닉네임 중복 알림 추가, 특수문자 제거 정규식 추가

--- a/src/components/mypage/MemberInfo.scss
+++ b/src/components/mypage/MemberInfo.scss
@@ -108,11 +108,17 @@
       .textfield * {
         line-height: 1;
       }
+
       display: flex;
       align-items: center;
       padding: 20px 0;
       gap: 40px;
       border-bottom: 0.5px dotted black;
+
+      .nick-err {
+        display: flex;
+        align-items: center;
+      }
     }
   }
 
