--- a/src/pages/admin/Admin.scss
+++ b/src/pages/admin/Admin.scss
@@ -5,7 +5,7 @@
 .admin-container {
   display: flex;
   justify-content: center;
-  margin: 30px 0;
+  margin: 40px 0 200px 0;
   width: 1110px;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
 }
